--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,7 @@ services:
     volumes:
       - ./app:/app
     restart: always
+    command: >
+      bash -c "cd /app &&
+               rm -f database.db &&
+               python app.py"
